<?xml version="1.0"?>
<package format="2">
  <name>cone_pose</name>
  <version>1.0.0</version>
  <description>A particle filter for determining the pose of WPIRM cones.</description>
  <maintainer email="narosenberg@wpi.edu">Nathan Rosenberg</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/wpirm/cone_pose</url>
  <author email="narosenberg@wpi.edu">Nathan Rosenberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
