<?xml version="1.0"?>
<package format="2">
  <name>wpirm_navigation</name>
  <version>1.0.0</version>
  <description>WPIRM's navigation stack.</description>
  <maintainer email="narosenberg@wpi.edu">Nathan Rosenberg</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/wpirm/wpirm_navigation</url>
  <author email="narosenberg@wpi.edu">Nathan Rosenberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>depthimage_to_laserscan</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>

  
  <exec_depend>message_runtime</exec_depend>
</package>
